--- a/css/common.css
+++ b/css/common.css
@@ -309,12 +309,16 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
 
 .menu_area-menu .menu-item{
     border-left: solid #fff 1px;
+    width: calc(100% / 5);
+    text-align: center;
 }
 @media screen and (max-width: 768px){
     .menu_area-menu .menu-item{
         margin-top: 0.4rem;
         font-size: 1.6rem;
         position: relative;
+        width: 100%;
+        border-bottom: 1px solid #F593A5;
     }
 }
 .menu_area-menu .menu-item:last-of-type{
@@ -328,7 +332,8 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
     background-position: center;
     margin-left: 0.8rem;
     padding: 1rem;
-    left: 11rem;
+    right: 0;
+    left: auto;
     position: absolute;
     top: 51%;
     transform: translateY(-50%);
@@ -341,6 +346,12 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
     color: #fff;
 }
 
+@media screen and (max-width: 768px){
+    .menu_area-menu .menu-item a{
+        color: #F593A5;
+    }
+}
+
 .header_nav-menu_area .menu_area-hamburger{
     display: none;
 }
@@ -350,7 +361,7 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
         right: 1.6rem;
         top: 2.5rem;
         border-right: none;
-        height: 2.2rem;
+        height: 1.4rem;
         width: 3.2rem;
         position: absolute;
     }
@@ -369,8 +380,8 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 0.4rem;
-    background-color: #333;
+    height: 0.3rem;
+    background-color: #FC7B9A;
     display: inline-block;
     transition: all 0.4s;
     box-sizing: border-box;
@@ -384,15 +395,19 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
 }
 .hamburger span:nth-of-type(1) {
     top: 0;
+    margin: auto;
 }
 .hamburger.active span:nth-of-type(1) {
-    transform: translateY(0.86rem) rotate(-45deg);
+    bottom: 0;
+    transform: rotate(-45deg);
 }
 .hamburger span:nth-of-type(2) {
     bottom: 0;
+    margin: auto;
 }
 .hamburger.active span:nth-of-type(2) {
-    transform: translateY(-0.86rem) rotate(45deg);
+    transform: rotate(45deg);
+    top: 0;
 }
 
 /* フッター */
