--- a/css/common.css
+++ b/css/common.css
@@ -380,12 +380,11 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
     position: absolute;
     left: 0;
     width: 100%;
-    height: 0.3rem;
+    height: 2px;
     background-color: #FC7B9A;
     display: inline-block;
     transition: all 0.4s;
     box-sizing: border-box;
-    border-radius: 0.2rem;
 }
 .top .hamburger span {
     background-color: #fff;
@@ -582,7 +581,7 @@ _::-webkit-full-page-media, _:future, :root .copy_area-para {
     position: absolute;
     height: 1px;
     background-color:  #F04E75;
-    left: calc((100vw - 112rem) / -2);
+    left: calc((100vw - 104rem) / -2);
     bottom: -1px;
 }
 @media screen and (max-width: 768px) {
@@ -597,8 +596,9 @@ _::-webkit-full-page-media, _:future, :root .sec_ttl {
 
 .sec_ttl.sec_ttl--styleA{
     border: none;
-    display: block;
     padding: 0;
+    display: inline-block;
+    text-align: left;
 }
 
 .sec_ttl.sec_ttl--styleB{
@@ -1740,3 +1740,89 @@ _::-webkit-full-page-media, _:future, :root .card_list-item .card_list-item_btn{
     filter: drop-shadow(0 0.3rem 0.3rem #33333344);
     display: block;
 }
+
+
+.beautymenu_list{
+    display: flex;
+    border: solid 1px #F04E75;
+    border-bottom: none;
+    flex-wrap: wrap;
+    margin-top: 7rem;
+}
+@media screen and (max-width: 768px){
+    .beautymenu_list{
+        margin-top: 0;
+    }
+}
+.beautymenu_list-item{
+    width: 25%;
+    transition: transform 0.3s ease;
+    border-bottom: solid 1px #F04E75;
+    box-sizing: border-box;
+    border-right: solid 1px #F04E75;
+}
+@media screen and (max-width: 768px){
+    .beautymenu_list-item{
+        width: 50%;
+    }
+    .beautymenu_list-item:nth-child(2){
+        border-right: none;
+    }
+}
+.beautymenu_list-item:last-child{
+    border-right: none;
+}
+.beautymenu_list-item a{
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+.beautymenu_list-item img{
+    transition: transform 0.3s ease;
+    transform-origin: right;
+}
+.beautymenu_list-item a:hover img{
+    transform: scale(1.2);
+}
+
+.beautymenu_list-item .menu_txt{
+    position: absolute;
+    top: 50%;
+    z-index: 50;
+    color: #222;
+    left: 2rem;
+    left: 1.5rem;
+    font-weight: 600;
+    font-size: 1.5rem;
+    transform: translateY(-50%);
+    font-family: '游明朝','Yu Mincho',YuMincho,'Hiragino Mincho Pro',serif;
+}
+
+@media screen and (max-width: 768px){
+    .beautymenu_list-item .menu_txt{
+        font-size: 1.2rem;
+        left: 1rem;
+        line-height: 1.5;
+        font-weight: bold;
+    }
+}
+
+.dark-cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    opacity: .5;
+    transition: background-color 0.3s ease;
+    pointer-events: none;
+  }
+
+  .beautymenu_list-item a:hover .dark-cover {
+    background-color: #222;
+  }
+
+  .beautymenu_list-item a:hover .menu_txt {
+    color: #fff;
+  }
