--- a/css/page.css
+++ b/css/page.css
@@ -4,7 +4,7 @@
 }
 @media screen and (max-width: 768px) {
     .art_page{
-        margin: 6.4rem 1.6rem 0 1.6rem;
+        margin: 2.4rem 1.6rem 0 1.6rem;
     }
 }
 .page-template-thanks-templateB .art_page {
@@ -245,11 +245,21 @@
 }
 
 .page_menu{
-    margin-top: 4rem;
+    margin-top: 14rem;
+}
+@media screen and (max-width: 768px) {
+    .page_menu{
+        margin-top: 7.7rem;
+    }
 }
 
 .menu_list-item{
     margin-top: 5rem;
+}
+@media screen and (max-width: 768px) {
+    .menu_list-item{
+        margin-top: 2.4rem;
+    }
 }
 
 
@@ -258,7 +268,6 @@
 }
 @media screen and (max-width: 768px){
     .data_table .row{
-        display: block;
     }
 }
 .data_table .row.hed .data_table-item{
@@ -270,9 +279,14 @@
     border-bottom: #F593A5 1px solid;
     box-sizing: border-box;
 }
+@media screen and (max-width: 768px){
+    .data_table .row.hed .data_table-item{
+        font-size: 1.4rem;
+    }
+}
 .data_table-item{
     flex: 1;
-    padding: 1.6rem;
+    padding: 0.8rem 1.6rem;
     text-align: center;
     font-size: 2.4rem;
     border-left: #F593A5 1px solid;
@@ -285,7 +299,37 @@
         flex: unset;
         width: 100%;
         border-right: #F593A5 1px solid;
+        padding: 1rem;
+        line-height: 1.2;
+        font-size: 1.5rem;
     }
+    .data_table-item:nth-child(odd){
+    border-right: none;
+    }
+}
+.data_table-item.name{
+    font-size: 2.2rem;
+}
+@media screen and (max-width: 768px){
+    .data_table-item.name{
+    font-size: 1.5rem;
+    }
+}
+.data_table-item.mprice{
+    font-size: 2.2rem;
+}
+@media screen and (max-width: 768px){
+    .data_table-item.mprice{
+    font-size: 1.5rem;
+    }
+}
+.data_table-item.ttl{
+    font-size: 2rem;
+    background: #ffeef1;
+    padding: 0.8rem;
+    border-top: #F593A5 1px solid;
+    color: #f593a5;
+    border-right: #F593A5 1px solid;
 }
 .data_table-item:last-child{
     border-right: #F593A5 1px solid;
@@ -301,6 +345,300 @@
     box-sizing: border-box;
 }
 
-.data_table{
+.data_table + .data_table-item.ttl{
+    border-top: none;
+}
 
+.about .catchcopy{
+    background: url(../img/about/logo_outline.svg);
+    background-repeat: no-repeat;
+    background-size: 64rem;
+    background-position: top -14rem right -11rem;
+    height: 32rem;
+    padding-top: 18rem;
+}
+@media screen and (max-width: 768px){
+    .about .catchcopy{
+    padding: 1.6rem;
+    background-size: 34rem;
+    background-position: top -10rem right -8rem;
+    height: 24rem;
+    }
+}
+.about .catchcopy_txt{
+    font-size: 4rem;
+    line-height: 1.5;
+    margin: auto;
+}
+@media screen and (max-width: 768px){
+    .about .catchcopy_txt{
+        font-size: 2.7rem;
+        margin-top: 5rem;
+    }
+}
+.about .catchcopy_txt span{
+    color: #F593A5;
+    font-weight: 500;
+}
+.sec_ttl-ja{
+    color: #222;
+    font-size: 2.1rem;
+    margin-top: 1.2rem;
+    display: inline-block;
+}
+
+.concept.sec{
+    margin-top: 0;
+}
+@media screen and (max-width: 768px){
+    .concept.sec{
+        margin-top: -6.4rem;
+    }
+}
+.concept .container{
+    max-width: 109rem;
+}
+@media screen and (max-width: 768px){
+    .concept .container{
+    max-width: unset;
+    padding: 1.6rem;
+    }
+}
+.concept .sec_ttl-en{
+    font-size: 3.4rem;
+}
+.concept .sec_ttl-ja{
+    font-size: 2.6rem;
+}
+@media screen and (max-width: 768px){
+    .concept .sec_ttl-en{
+        font-size: 2.4rem;
+    }
+    .concept .sec_ttl-ja{
+        font-size: 1.8rem;
+    }
+}
+
+.cencept_list{
+    margin-top: 6.4rem;
+}
+@media screen and (max-width: 768px){
+    .cencept_list{
+        margin-top: 0;
+    }
+}
+.cencept_list-item{
+    display: flex;
+    margin-top: 16rem;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item{
+        display: block;
+        margin-top: 0rem;
+    }
+}
+.cencept_list-item:first-child{
+    margin-top: 0;
+}
+.cencept_list-item:nth-child(even){
+    flex-direction: row-reverse;
+}
+
+.cencept_list-item .item_hed{
+    padding-left: calc((100vw - 104rem) / 2);
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed{
+    padding-left: 0;
+    }
+}
+.cencept_list-item:nth-child(even) .item_hed{
+    padding-left: 0;
+    padding-right: calc((100vw - 104rem) / 2);
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(even) .item_hed{
+        padding-right: 0;
+    }
+}
+.cencept_list-item .item_hed-img{
+    position: relative;
+    width: 50.82rem;
+    height: 28.605rem;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed-img{
+        width: 100%;
+        height: 24rem;
+    }
+}
+.cencept_list-item .item_hed-img{
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed img{
+        width: 88%;
+    }
+}
+.cencept_list-item .item_hed img {
+    position: absolute;
+    z-index: 10;
+    width: 110%;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed img {
+        width: 88%;
+    }
+}
+.cencept_list-item:nth-child(even) .item_hed img{
+    top: 0;
+    right: 0;
+}
+
+.cencept_list-item .item_hed-ttl{
+    font-size: 4rem;
+    margin-bottom: 4.8rem;
+    padding: 1rem;
+    padding-left: 7.4rem;
+    border-bottom: #F593A5 1px solid;
+    position: relative;
+    left: -2.5rem;
+    font-weight: 300;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed-ttl{
+        font-size: 2.4rem;
+        left: 0;
+        margin-right: 4.4rem;
+        padding-left: 6.8rem;
+        margin-bottom: 2.4rem;
+    }
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(2) .item_hed-ttl{
+        padding-left: 7.8rem;
+        margin-right: 0;
+        margin-left: 4.4rem;
+    }
+    .cencept_list-item:last-child .item_hed-ttl{
+        padding-left: 8.8rem;
+    }
+}
+.cencept_list-item .item_hed-ttl::before{
+    content: '';
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 5rem;
+    height: 4.6rem;
+    left: 0;
+    top: 2rem;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed-ttl::before{
+        top: 0.4rem;
+        width: 4rem;
+        left: 1.6rem;
+    }
+}
+.cencept_list-item:first-child .item_hed-ttl::before{
+    background-image: url(../img/about/01.svg);
+}
+.cencept_list-item:nth-child(2) .item_hed-ttl::before{
+    background-image: url(../img/about/02.svg);
+    width: 6rem;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(2) .item_hed-ttl::before{
+        width: 5rem;
+    }
+}
+.cencept_list-item:last-child .item_hed-ttl::before{
+    background-image: url(../img/about/03.svg);
+    width: 6rem;
+}
+.cencept_list-item .item_hed-ttl::after{
+    content: '';
+    position: absolute;
+    background-color: #F593A5;
+    height: 1px;
+    width: calc((100vw - 104rem) / 2);
+    left: calc((100vw - 104rem) / -2);
+    bottom: -1px;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_hed-ttl::after{
+        display: none;
+    }
+}
+.cencept_list-item:nth-child(even) .item_hed-ttl::after{
+    width: calc(((100vw - 104rem) / 2) + 2.5rem);
+    left: unset;
+    right: calc(((100vw - 104rem) / -2) - 2.5rem);
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(even) .item_hed-ttl::after{
+        display: none;
+    }
+}
+
+.cencept_list-item .item_desc{
+    border-top: #F593A5 1px solid;
+    border-left: #F593A5 1px solid;
+    border-bottom: #F593A5 1px solid;
+    position: relative;
+    height: 32rem;
+    top: 21rem;
+    z-index: 1;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_desc{
+        top: -9rem;
+        height: auto;
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+        margin-left: 4rem;
+        padding-left: 2.4rem;
+        padding-right: 2.4rem;
+    }
+}
+
+.cencept_list-item:nth-child(even) .item_desc{
+    border-right: #F593A5 1px solid;
+    border-left: none;
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(even) .item_desc{
+        margin-left: 0;
+        margin-right: 4rem;
+    }
+}
+.cencept_list-item .item_desc-txt{
+    padding: 2.4rem;
+    padding-left: 10rem;
+    padding-right: calc((100vw - 104rem) / 2);
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item .item_desc-txt{
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+.cencept_list-item:nth-child(even) .item_desc-txt{
+    padding-right: 10rem;
+    padding-left: calc((100vw - 104rem) / 2);
+}
+@media screen and (max-width: 768px){
+    .cencept_list-item:nth-child(even) .item_desc-txt{
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
+.about .footer {
+    margin-top: 26rem;
+}
+@media screen and (max-width: 768px){
+    .about .footer {
+        margin-top: 0;
+    }
 }
