--- a/css/page.css
+++ b/css/page.css
@@ -7,6 +7,9 @@
         margin: 2.4rem 1.6rem 0 1.6rem;
     }
 }
+.art_page_contents{
+    margin-top: 4rem;
+}
 .page-template-thanks-templateB .art_page {
     margin-top: 7.2rem;
     padding-top: 7.2rem;
@@ -244,24 +247,6 @@
 }
 }
 
-.page_menu{
-    margin-top: 14rem;
-}
-@media screen and (max-width: 768px) {
-    .page_menu{
-        margin-top: 7.7rem;
-    }
-}
-
-.menu_list-item{
-    margin-top: 5rem;
-}
-@media screen and (max-width: 768px) {
-    .menu_list-item{
-        margin-top: 2.4rem;
-    }
-}
-
 
 .data_table .row{
     display: flex;
@@ -299,13 +284,14 @@
     .data_table-item{
         flex: unset;
         width: 100%;
-        border-right: #F593A5 1px solid;
+        border-right: none;
         padding: 1rem;
         line-height: 1.2;
         font-size: 1.5rem;
     }
     .data_table-item:nth-child(odd){
     border-right: none;
+    font-weight: 400;
     }
 }
 .data_table-item.name{
@@ -341,6 +327,11 @@
 .data_table-item:last-child{
     border-right: #F593A5 1px solid;
 }
+.menu_list-item{
+    margin-top: 6.4rem;
+}
+
+
 .menu_list_ttl{
     font-weight: 500;
     padding: 1.6rem 2.4rem;
@@ -432,6 +423,7 @@
         font-size: 2.6rem;
         left: -0.4rem;
         margin: 0;
+        font-weight: 400;
     }
 }
 
