--- a/css/page.css
+++ b/css/page.css
@@ -349,6 +349,9 @@
     }
 }
 
+
+/* アバウトページ ＝＝＝＝＝＝＝*/
+
 .data_table + .data_table-item.ttl{
     border-top: none;
 }
@@ -414,6 +417,7 @@
     color: #F593A5;
     position: relative;
     left: -0.8rem;
+    font-weight: 400;
 }
 @media screen and (max-width: 768px){
     .concept .sec_ttl-en{
@@ -423,7 +427,6 @@
         font-size: 2.6rem;
         left: -0.4rem;
         margin: 0;
-        font-weight: 400;
     }
 }
 
